Changing the resource file
Removed access key

--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8082
-aws.accessKey = AKIAW7DRFZA42HDOJ7YJ
-aws.secretKey = sgc2OSTd1gETbWIrcf+sBwXaE2e681JR9N+M6Bsy
+aws.accessKey = {your access key}
+aws.secretKey = {your secret key}
